exception handling classes are added. frontend minor bugfix. openapi spec update. make controller and service layer great again.
